[package]
name = "gis_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-bevy = "1.0"
bevy = "0.13"
bevy_asset = "0.13"
bevy_prototype_lyon="0.11"
bevy_pancam = {version = "0.11.0", features = ["bevy_egui"]}
bevy_egui = "0.25"
bevy_math = "0.13"
geo-types = "0.7.8"
geo = "0.27"
geojson = { version = "*", features = ["geo-types"] }
eframe = "0.26.*"
egui_file = "0.16.2"
rfd = "0.13.0"